--- a/trunk/doc/report.tex
+++ b/trunk/doc/report.tex
@@ -119,7 +119,7 @@ Para poder analizar del rendimiento un desarrollador aplica las herramientas lis
 \end{table}
 
 Las pruebas de rendimiento como STREAM, HPL, IMB Ping Pong y HPCC permiten conocer el estado del sistema y los límites de rendimiento en la práctica.
-Los perfiles de ejecucion de aplicaciones y sistema permiten conocer como se utilizan los recursos del sistema para llevar a cabo las instrucciones de cada programa.
+Los perfiles de ejecución de aplicaciones y sistema permiten conocer como se utilizan los recursos del sistema para llevar a cabo las instrucciones de cada programa.
 
 \section{Organización del Contenido}
 
@@ -161,7 +161,7 @@ La mejora de un programa utilizando cómputo paralelo está limitado por el tiem
 \bigskip
 
 Suponiendo que una aplicación requiere de un trabajo serial más un trabajo paralelizable, la ley de {\it Amdahl} calcula la ganancia ($ S $) mediante la Ecuación \ref{eq:amdahl}.
-Donde $ P $ es el porcentaje de trabajo paralelizable, ($ 1-P $) es entonces el trabajo en serie o secuencial, y $ N $ la cantidad de unidades de cómputo a utilizar.
+Donde $ P $ es el porcentaje de trabajo hecho en paralelo, ($ 1-P $) es entonces el trabajo en serie o secuencial, y $ N $ la cantidad de unidades de cómputo a utilizar.
 
 \begin{eqnarray}
 \label{eq:amdahl}
@@ -203,8 +203,7 @@ donde $ P $ es el número de unidades de cómputo y $ \alpha $ el porcentaje de 
 
 \bigskip
 
-Al aplicar esta ley obtenemos que un problema con datos grandes o repetitivos en cantidades grandes puede ser eficientemente paralelizable. Nos es útil para determinar el tamaño de problema a utilizar cuando los recursos de cómputo son incrementados.
-En el mismo tiempo de ejecución, el programa resuelve entonces problemas más grandes.
+Al aplicar esta ley obtenemos que un problema con datos grandes o repetitivos en cantidades grandes puede ser computado en paralelo muy eficientemente. Nos es útil para determinar el tamaño de problema a utilizar cuando los recursos de cómputo son incrementados. En el mismo tiempo de ejecución, el programa resuelve entonces problemas más grandes.
 
 \begin{table}[H]
 \caption{Tamaño de Datos de Entrada}
@@ -258,7 +257,7 @@ archivos temporales e incluso el ancho de banda de red utilizado durante la comu
 
 \section{Técnicas de Análisis}
 
-El procedimiento de mejora general usualmente consiste en ciclos iterativos de medir, localizar, optimizar,
+El procedimiento de mejora general usualmente consiste en ciclos iterativos de medir, localizar, optimizar y
 comparar (Figura \ref{fig:cycle}). Es muy importante mantener la disciplina en realizar un cambio a la
 vez ya que esto asegura resultados reproducibles y convergentes, sin efectos no deseados.
 
@@ -293,14 +292,14 @@ sistema de cómputo.
 
 \bigskip
 
-Para comparar es recomendable utilizar la media geométrica según la Ecuación \ref{eq:geomean} en lugar de la aritmética (\cite{how-not-to-lie}), ya que permite dimensionar la tendencia central de un valor típico en un conjunto de números. Esto permite reducir el impacto de ruido introducido por una ejecución problemática.
+Para comparar es recomendable utilizar la media geométrica según la Ecuación \ref{eq:geomean} en lugar de la aritmética \cite{how-not-to-lie}, ya que permite dimensionar la tendencia central de un valor típico en un conjunto de números. Esto permite reducir el impacto de ruido introducido por una ejecución problemática.
 
 \begin{equation}
 \label{eq:geomean}
 G = \sqrt[n]{x_{1} \ldots x_{n}}
 \end{equation}
 
-La raíz n-ésima de un número (para un $ n $ posiblemente muy grande), es una operación ineficiente ya que se implementa con métodos numéricos de aproximación siguiendo el método de {\it Newton} (\cite{numerical-analysis}). En cambio se suele tomar el anti-logaritmo del promedio de los logaritmos de los valores siguiendo la ecuación \ref{eq:geomean-log}.
+La raíz n-ésima de un número (para un $ n $ posiblemente muy grande), es una operación ineficiente ya que se implementa con métodos numéricos de aproximación siguiendo el método de {\it Newton} \cite{numerical-analysis}. En cambio se suele tomar el anti-logaritmo del promedio de los logaritmos de los valores siguiendo la ecuación \ref{eq:geomean-log}.
 
 \begin{equation}
 \label{eq:geomean-log}
@@ -317,7 +316,7 @@ de rendimiento de aplicaciones.
 Para medir el rendimiento se utilizan pruebas de referencia ({\em benchmarks}); éstas pueden ser aplicaciones sintéticas construidas específicamente, o bien aplicaciones del mundo real computando un problema prefijado. Al tener valores de referencia se pueden caracterizar los sistemas de modo de predecir el rendimiento de una aplicación.
 Los valores a los que se llegan con un {\it benchmark} suelen ser más prácticos y
 comparables que los teóricos de acuerdo a condiciones ideales de uso de recursos.
-También es posible garantizar que el sistema sigue en un mismo estado con el correr\
+También es posible garantizar que el sistema sigue en un mismo estado con el correr
 del tiempo y después de cambios de configuraciones en {\it hardware} o {\it software}.
 
 \bigskip
@@ -545,17 +544,13 @@ simplemente la mayor capacidad de cómputo de operaciones flotantes posible.
 
 Una analogía interesante para entender cómo el {\it benchmark} se relaciona con diferentes núcleos de cómputo se muestra en la Figura \ref{fig:locality}. Por ejemplo al tener un problema que utiliza principalmente acceso a memoria local, se puede suponer que un sistema con buenos resultados de STREAM va ser útil.
 
-\bigskip
-
 \begin{figure}[H]
 \begin{center}
 \includegraphics[width=10cm]{locality.png}
-\caption{Localidad}
+\caption{Localidad temporal versus espacial en resultados de HPCC}
 \label{fig:locality}
 \end{center}
 \end{figure}
-
-\bigskip
 
 Para una mejor comparación de resultados de HPCC se utilizan diagramas
 denominados {\it kiviats}, un ejemplo se muestra en la Figura \ref{fig:kiviat}.
@@ -578,7 +573,7 @@ This is the DARPA/DOE HPC Challenge Benchmark version 1.2.0 October 2003
 Produced by Jack Dongarra and Piotr Luszczek
 Innovative Computing Laboratory
 University of Tennessee Knoxville and Oak Ridge National Laboratory
-See the source files for authors of specific codes.
+
 Begin of Summary section.
 \end{verbatim}
 
@@ -684,26 +679,26 @@ Se recomienda un proceso de aplicación gradual empezando por herramientas gener
 {\bf Característica} & {\bf Herramientas} \\ \hline
 Capacidad del sistema & Benchmark HPCC \\ \hline
 Medición de ejecución & {\tt time}, {\tt gettimeofday()}, {\tt MPI\_WTIME()} \\ \hline
-Perfil de ejecución & {\tt gprof} \\ \hline
-Comportamiento de la aplicación & {\tt gprof} \\ \hline
-Comportamiento de librerías & valgrind, MPI vampir. \\ \hline
-Comportamiento del sistema & oprofile \\ \hline
-Vectorización & gcc \\ \hline
-Contadores en {\it hardware} & oprofile, PAPI \\ \hline
+Perfil de ejecución & profilers: {\tt gprof, perf} \\ \hline
+Comportamiento de la aplicación & profilers: {\tt gprof, perf} \\ \hline
+Comportamiento de librerías & profilers: valgrind, MPI vampir. \\ \hline
+Comportamiento del sistema & profilers: oprofile, perf \\ \hline
+Vectorización & compilador: gcc \\ \hline
+Contadores en {\it hardware} & oprofile, PAPI, perf \\ \hline
 \end{tabular}
 \label{table:tooling}
 \end{table}
 
-Primero se establece una línea de comparación al ejecutar una prueba de rendimiento del sistema, HPCC brinda un conjunto de métricas muy completo. Segundo se utilizan herramientas para medir el tiempo de ejecución de la aplicación sobre diferentes escenarios. time permite una ejecución directa sin modificación de código, {\tt gettimeofday()} requiere modificación de código pero puede ser utilizados con mayor libertad dentro de la aplicación.  
-En el caso de estar utilizando la librería MPI {\tt MPI\_WTime()} y la herramienta VAMPIR\footnote{\tt http://www.vampir.eu/} proveen soporte especifico para análisis de rendimiento.
-Tercero se dimensiona el comportamiento de la aplicación mediante un perfil de ejecución y un análisis de cuello de botella utilizando {\tt gprof}. Cuarto se analiza el comportamiento del sistema ejecutando la aplicación mediante {\tt oprofile}. Quinto se revisa el reporte del compilador para comprobar que se estén vectorizando los ciclos de cálculo más intensivos. Por último, se analiza el comportamiento de las unidades de cómputo utilizando soporte de {\it hardware} mediante herramientas como {\tt oprofile} y {\it Performance Application Programming Interface} (PAPI) \footnote{\tt http://icl.cs.utk.edu/papi/}.
+Primero se establece una línea de comparación al ejecutar una prueba de rendimiento del sistema, {\it HPCC} brinda un conjunto de métricas muy completo. Segundo se utilizan herramientas para medir el tiempo de ejecución de la aplicación sobre diferentes escenarios. time permite una ejecución directa sin modificación de código, {\tt gettimeofday()} requiere modificación de código pero puede ser utilizados con mayor libertad dentro de la aplicación.  
+En el caso de estar utilizando la librería MPI {\tt MPI\_WTime()} y la herramienta VAMPIR\footnote{\href{http://www.vampir.eu}{http://www.vampir.eu}} proveen soporte especifico para análisis de rendimiento.
+Tercero se dimensiona el comportamiento de la aplicación mediante un perfil de ejecución y un análisis de cuello de botella utilizando {\tt gprof}. Cuarto se analiza el comportamiento del sistema ejecutando la aplicación mediante {\tt oprofile} \footnote{\href{http://oprofile.sourceforge.net}{http://oprofile.sourceforge.net}} o {\tt perf} \footnote{\href{https://perf.wiki.kernel.org}{https://perf.wiki.kernel.org}}. Quinto se revisa el reporte del compilador para comprobar que se estén vectorizando los ciclos de cálculo más intensivos. Por último, se analiza el comportamiento de las unidades de cómputo utilizando soporte de {\it hardware} mediante herramientas como {\tt perf}, {\tt oprofile} y {\it Performance Application Programming Interface} (PAPI) \footnote{\href{http://icl.cs.utk.edu/papi}{http://icl.cs.utk.edu/papi}}.
 
 \section{Tiempo de Ejecución}
 
 \subsection{Tiempo de ejecución global}
 
-Para medir el tiempo de ejecución de un comando en consola se utiliza {\tt time(1)}. Aunque rudimentaria, esta simple herramienta no necesita de instrumentación de código y se encuentra disponible en cualquier distribución {\it  GNU/Linux}.
-El interprete de comandos tiene su propia versión embebida, sin embargo el del sistema brinda información del uso de otros recursos del sistema, localizado en {\tt /usr/bin/time}.
+Para medir el tiempo de ejecución de un comando en consola se utiliza {\tt time(1)}. Aunque rudimentaria, esta simple herramienta no necesita de instrumentación de código y se encuentra disponible en cualquier distribución {\it GNU/Linux}.
+El interprete de comandos tiene su propia versión embebida, sin embargo el del sistema brinda información del uso de otros recursos del sistema, usualmente localizado en {\tt /usr/bin/time}.
 
 \bigskip
 
@@ -742,7 +737,7 @@ Las más utilizadas son {\tt gettimeofday(3)} y {\tt clock(3)}, aunque éste úl
 
 \bigskip
 
-El siguiente código ejemplifica como obtener un número de segundos en un punto flotante de doble precisión.
+El siguiente código ejemplifica como obtener un número de segundos en una representación de punto flotante de doble precisión, permitiendo una granularidad de medición adecuada.
 
 \begin{lstlisting}
 double wtime(void)
@@ -812,9 +807,13 @@ de dependencias.
 
 \subsection{Ejemplo: {\tt gprof}}
 
-El perfil de ejecución muestra el tiempo individual y el tiempo acumulado en segundos de cada línea de código de la aplicación. Los binarios deben ser compilados con información extra de depuración, en el caso de {\tt gcc}, las opciones necesarias son {\tt -g -pg}. Si {\tt -g} no se encuentra presente entonces no se provee el reporte detallado por línea de ejecución. Esto permite identificar donde se esta gastando tiempo durante la ejecución.
+El perfil de ejecución de {\tt gprof} muestra el tiempo individual y el tiempo acumulado en segundos de cada línea de código de la aplicación. Los binarios deben ser compilados con información extra de depuración, en el caso de {\tt gcc}, las opciones necesarias son {\tt -g -pg}. Si {\tt -g} no se encuentra presente entonces no se provee el reporte detallado por línea de ejecución. Esto permite identificar donde se está consumiendo tiempo durante la ejecución.
 La herramienta también muestra un cuadro de las llamadas entre funciones realizadas por el programa.
 Esto permite visualizar el esquema de dependencias durante la ejecución.
+
+\bigskip
+
+A continuación se muestra como realizar la compilación incluyendo información de depuración específica, además de un caso concreto contra una aplicación simulando el juego de la vida \cite{conway}.
 
 \begin{lstlisting} 
 $ gcc -g -pg program.c -o program
@@ -852,88 +851,46 @@ index % time    self  children    called     name
 
 \section{Perfil de Ejecución de Sistema}
 
-Un {\it profiler} a nivel de sistema analiza perfiles de rendimiento a nivel de núcleo del
+Un {\it profiler} a nivel de sistema analiza el uso de los recursos disponibles a nivel de núcleo del
 sistema operativo. Actúa de forma transparente a nivel global. Utiliza
-contadores de {\it hardware} del CPU e utiliza interrupciones de un temporizador
-cuando no logra detectar soporte específico en {\it hardware}.
+contadores de {\it hardware} del CPU y utiliza interrupciones de un temporizador
+cuando no logra detectar soporte específico en {\it hardware}. Aunque tiene un costo adicional inherente, la sobrecarga es mínimo.
+
+\bigskip
 
 Para obtener realizar un análisis se necesita:
 
 \begin{enumerate}
-\item detener toda aplicación o servicio no relevante en el sistema.
-\item ejecutar el profiler
-\item ejecutar la aplicación
-\item generar el resumen
+\item Detener toda aplicación o servicio no relevante en el sistema.
+\item Ejecutar el profiler
+\item Ejecutar la aplicación
+\item Generar el resumen
 \end{enumerate}
 
 La herramienta de por si no se necesita acceder al código fuente de la aplicación.
 Pero si esta disponible el código correspondiente se muestra anotado con contadores
-si hay símbolos de depuración en el binario {\it debugging}.
+si hay símbolos de depuración en el binario.
 
-Este método tiene en cuenta todos los componentes del sistema.
-Se basa en la lectura de contadores del mismo procesador implementados en hardware.
-Aunque tiene un costo adicional inherente, la sobrecarga es mínimo.
+\bigskip
 
 Los registros de {\it hardware} implementando contadores más utilizados son los
 siguientes:
 
 \begin{enumerate}
-\item cantidad total de ciclos de procesador
-\item cantidad total de instrucciones ejecutadas
-\item cantidad de ciclos detenidos por espera de acceso a memoria
-\item cantidad de instrucciones de punto flotante
-\item cantidad de fallos de cache de nivel uno (L1)
-\item cantidad de instrucciones de carga y descarga
+\item Cantidad total de ciclos de procesador
+\item Cantidad total de instrucciones ejecutadas
+\item Cantidad de ciclos detenidos por espera de acceso a memoria
+\item Cantidad de instrucciones de punto flotante
+\item Cantidad de fallos de cache de nivel uno (L1)
+\item Cantidad de instrucciones de carga y descarga
 \end{enumerate}
 
-Las herramientas propietarias suelen tener acceso a contadores más específicos e
+En núcleos más viejos que la versión 2.6, en lugar de {\tt oprofile} se recomienda utilizar {\tt perf}. Al estar implementados a nivel de núcleo, estos evitan las llamadas al sistema y tienen una sobrecarga de un orden de magnitud menor que los profilers a nivel de aplicación. Las herramientas propietarias suelen tener acceso a contadores más específicos e
 incluso programables para funciones determinadas de medición.
 
 \subsection{Ejemplo: {\tt perf}}
 
-En kernel más viejos que 2.6, {\tt oprofile} \footnote{\tt http://oprofile.sourceforge.net} sino {\tt perf} \footnote{\tt https://perf.wiki.kernel.org}. Al estar implementados a nivel de núcleo, estos evitan las llamadas al sistema y tienen una sobrecarga de un orden de magnitud menor que los profilers a nivel de aplicación.
-
-\begin{lstlisting}
-$ perf report
-# Events: 1K cycles
-# Overhead Command Shared Object Symbol
-28.15% firefox-bin libxul.so [.] 0xd10b45
-4.45% swapper  [kernel.kallsyms] [k] mwait_idle_with_hints
-4.26% swapper  [kernel.kallsyms] [k] read_hpet
-2.13% firefox-bin  firefox-bin [.] 0x1e3d
-1.40% unity-panel-ser  libglib-2.0.so.0.2800.6 [.] 0x886f1
-...
-\end{lstlisting}
-
-\begin{lstlisting}
- Percent |   Source code & Disassembly of program
-         :   Disassembly of section .text:
-         :   08048484 <main>:
-         :   #include <string.h>
-         :   #include <unistd.h>
-         :   #include <sys/time.h>
-         :
-         :   int main(int argc, char **argv)
-         :   {
-    0.00 :    8048484:       55                      push   %ebp
-    0.00 :    8048485:       89 e5                   mov    %esp,%ebp
-...
-    0.00 :    8048530:       eb 0b                   jmp    804853d <main+0xb9>
-         :                           count++;
-   14.22 :    8048532:       8b 44 24 2c             mov    0x2c(%esp),%eax
-    0.00 :    8048536:       83 c0 01                add    $0x1,%eax
-   14.78 :    8048539:       89 44 24 2c             mov    %eax,0x2c(%esp)
-         :           memcpy(&tv_end, &tv_now, sizeof(tv_now));
-         :           tv_end.tv_sec += strtol(argv[1], NULL, 10);
-         :           while (tv_now.tv_sec < tv_end.tv_sec ||
-         :                  tv_now.tv_usec < tv_end.tv_usec) {
-         :                   count = 0;
-         :                   while (count < 100000000UL)
-   14.78 :    804853d:       8b 44 24 2c             mov    0x2c(%esp),%eax
-   56.23 :    8048541:       3d ff e0 f5 05          cmp    $0x5f5e0ff,%eax
-    0.00 :    8048546:       76 ea                   jbe    8048532 <main+0xae>
-...
-\end{lstlisting}
+A continuación se demuestra la información provista por {\tt perf} en sus diferentes modos de ejecución: estadísticas de contadores, perfil de sistema y por último perfil de aplicación.
 
 \begin{lstlisting}
 $ perf stat -B program
@@ -954,13 +911,58 @@ Performance counter stats for 'program':
       0.957617512  seconds time elapsed
 \end{lstlisting}
 
-Este punto de análisis requiere conocimiento avanzado de como funciona un CPU, su acceso a memoria y los costos de las diferentes instrucciones soportadas. \cite{hennessy} \cite{intel-optimization}.
+\begin{lstlisting}
+$ perf record ./mm
+$ perf report
+# Events: 1K cycles
+# Overhead Command Shared Object Symbol
+28.15% main mm [.] 0xd10b45
+4.45% swapper  [kernel.kallsyms] [k] mwait_idle_with_hints
+4.26% swapper  [kernel.kallsyms] [k] read_hpet
+...
+\end{lstlisting}
+
+\begin{lstlisting}
+ Percent |   Source code & Disassembly of program
+         :   Disassembly of section .text:
+         :   08048484 <main>:
+         :   #include <string.h>
+         :   #include <unistd.h>
+         :   #include <sys/time.h>
+         :
+         :   int main(int argc, char **argv)
+         :   {
+0.00:    8048484:       55                      push   %ebp
+0.00:    8048485:       89 e5                   mov    %esp,%ebp
+...
+0.00:    8048530:       eb 0b                   jmp 804853d <main+0xb9>
+         :                           count++;
+14.22:    8048532:       8b 44 24 2c             mov    0x2c(%esp),%eax
+0.00:    8048536:       83 c0 01                add    $0x1,%eax
+14.78:    8048539:       89 44 24 2c             mov    %eax,0x2c(%esp)
+         :           memcpy(&tv_end, &tv_now, sizeof(tv_now));
+         :           tv_end.tv_sec += strtol(argv[1], NULL, 10);
+         :           while (tv_now.tv_sec < tv_end.tv_sec ||
+         :                  tv_now.tv_usec < tv_end.tv_usec) {
+         :                   count = 0;
+         :                   while (count < 100000000UL)
+14.78:    804853d:       8b 44 24 2c             mov    0x2c(%esp),%eax
+56.23:    8048541:       3d ff e0 f5 05          cmp    $0x5f5e0ff,%eax
+0.00:    8048546:       76 ea                   jbe 8048532 <main+0xae>
+...
+\end{lstlisting}
+
+Este punto de análisis requiere conocimiento avanzado de como funciona el CPU utilizado, su acceso a memoria y los costos de las diferentes instrucciones soportadas. Una fuente de consulta debe incluir conceptos generales de arquitectura de procesadores \cite{hennessy} e información de los fabricantes \cite{intel-optimization}.
 
 \section{Reporte de Vectorización}
 
 Una herramienta de bajo nivel para analizar rendimiento es el mismo compilador
 que debería estar vectorizando los ciclos de cómputo intensivo. Esto es muy
 útil para detectar si los cuellos de botella ya se encuentran optimizados o no.
+
+\bigskip
+
+Por ejemplo, GCC provee opciones especificas que deben ser provistas para mostrar el reporte.
 
 \begin{lstlisting}
 $ gcc -c -O3 -ftree-vectorizer-verbose=1 ex.c
@@ -975,8 +977,7 @@ $ gcc -c -O3 -fdump-tree-vect-details ex.c
 ...
 \end{lstlisting}
 
-No es posible vectorizar código recursivo, por lo que puede ser un buen punto a
-optimizar. Por ejemplo en el caso de que el código sea recursivo se detalla lo siguiente:
+En el caso de existir código recursivo, podemos comprobar que no suele estar soportado por los compiladores actuales.
 
 \begin{lstlisting}
 $ gcc -Wall -Wextra -O3 -ftree-vectorizer-verbose=4 -g queen.c
@@ -992,8 +993,7 @@ Este capítulo propone un procedimiento sistemático de análisis.
 
 La Figura \ref{fig:procedure} muestra a grandes rasgos las etapas del proceso.
 Primero se establece una línea base de rendimiento del sistema utilizando pruebas conocidas.
-Luego se procede a trabajar en etapas iterativas asegurando en cada paso la estabilidad de los resultados, una correcta utilización de recursos y
-utilizando un perfil de ejecución se procede a optimizar. Luego de comprobar la mejora, se vuelve a empezar el ciclo.
+Luego se procede a trabajar en etapas iterativas asegurando en cada paso la estabilidad de los resultados, una correcta utilización de recursos y utilizando un perfil de ejecución. Luego de optimizar y comprobar la mejora, se vuelve a empezar el ciclo.
 
 \begin{figure}[H]
 \label{fig:procedure}
@@ -1012,33 +1012,33 @@ A continuación se muestran los pasos a realizar, junto con preguntas que guían
 \item Ejecutar pruebas de rendimiento sobre el sistema a utilizar para poder entender sus capacidades máximas en contraste con las teóricas.
 
 \begin{lstlisting}
-$ sudo apt-get install hpcc # Ubuntu
+$ sudo apt-get install hpcc
 $ mpirun -n `grep -c proc /proc/cpuinfo` ./hpcc
 $ cat hpccoutf.txt
 \end{lstlisting}
 
 \begin{enumerate}
-\item ¿Los resultados reflejan las capacidades del sistema?
+\item ¿Los resultados reflejan las capacidades esperadas del sistema?
 \item ¿Los FLOPS se aproximan al rendimiento de un sistema similar?
 \item ¿El rendimiento es $ CORES \times CLOCK \times FLOPS/CYCLE $ ?
-\item ¿La latencia y ancho de banda de la red es la esperada?
+\item ¿La latencia y ancho de banda de la memoria es la esperada?
 \end{enumerate}
 
-\item Comprobar variación de resultados para conocer la estabilidad de los mismos. La desviación estándar debe ser menor a 3 sigmas. Usar el promedio geométrico como referencia para comparaciones futuras.
+\item Comprobar variación de resultados para conocer la estabilidad de los mismos. La desviación estándar debe ser menor a 3 sigmas. Establecer cual es el promedio geométrico  a usar como referencia para comparaciones futuras.
 
 \begin{lstlisting}
-$ for i in `seq 1 32`; do /usr/bin/time -v ./app >> time.log; done
+$ for i in `seq 1 32`; do /usr/bin/time -v ./app >> time.csv; done
 \end{lstlisting}
 
 \begin{enumerate}
-\item ¿Son los resultados reproducibles?
+\item ¿Son los resultados estables?
 \item ¿La desviación estándar es menor que 3?
 \item ¿Cuál es el promedio geométrico para comparaciones futuras?
 \item ¿ Es necesario incrementar el problema para mejorar la desviación?
 \item ¿ Es posible reducir el tiempo sin afectar la desviación?
 \end{enumerate}
 
-\item Escalar el problema para calcular proporción serie/paralelo.
+\item Escalar el problema para dimensionar la cantidad de trabajo según el tamaño del problema.
 
 \begin{lstlisting}
 $ for size in `seq 1024 1024 10240`; do /usr/bin/time -v ./app $size >> size.log; done
@@ -1046,23 +1046,20 @@ $ for size in `seq 1024 1024 10240`; do /usr/bin/time -v ./app $size >> size.log
 
 \begin{enumerate}
 \item ¿Cuál es la relación entre el tiempo de las diferentes ejecuciones?
-\item Es la relación lineal o constante?
-\item Que porcentaje de la aplicación se estima paralelo?
+\item ¿Es la relación lineal o constante?
 \end{enumerate}
 
-\item Escalar cómputo para calcular límite de mejoras con {\it Amdalah} y {\it Gustafson}.
+\item Escalar cómputo para luego calcular límite de mejoras con {\it Amdalah} y {\it Gustafson}.
 
 \begin{lstlisting}
 $ for threads in `grep -c proc /proc/cpuinfo | xargs seq 1`; do OMP_NUM_THREADS=$threads ./app >> threads.log; done
 \end{lstlisting}
 
-\begin{lstlisting}
-$ for nodes in `wc -l mpd.hosts | xargs seq 1`; do mpirun -n $nodes ./app >> nodes.log; done
-\end{lstlisting}
-
 \begin{enumerate}
 \item ¿Cuál es la relación entre el tiempo de las diferentes ejecuciones?
 \item ¿Es la relación lineal o constante?
+\item ¿Qué porcentaje de la aplicación se estima paralelo?
+\item ¿Cual es la mejora máxima posible?
 \end{enumerate}
 
 \item Generar el perfil de llamadas a funciones dentro de la aplicación para revisar el diseño de la misma y los posibles cuellos de botella a resolver.
@@ -1073,11 +1070,6 @@ $ ./app
 \end{lstlisting}
 
 \begin{lstlisting}
-$ mpicc -g -pg app.c -o app
-$ mpirun -n 30 ./app
-\end{lstlisting}
-
-\begin{lstlisting}
 $ gprof --flat-profile --graph --annotated-source app
 ...
 \end{lstlisting}
@@ -1085,19 +1077,23 @@ $ gprof --flat-profile --graph --annotated-source app
 \begin{enumerate}
 \item ¿Cómo esta diseñada la aplicación?
 \item ¿Que dependencias en librerías externas tiene?
-\item ¿Dónde se concentra la mayor cantidad de tiempo de cómputo?
-\item ¿Implementa algún núcleo de computo conocido encuadrado dentro de librerías optimizadas como BLAS?
+\item ¿Implementa algún núcleo de cómputo conocido encuadrado dentro de librerías optimizadas como BLAS?
+\item ¿En que archivos, funciones y líneas se concentra la mayor cantidad de tiempo de cómputo?
 \end{enumerate}
 
 \item Utilizar el profiler a nivel de sistema
 
 \begin{lstlisting}
-$ prof record
+$ prof stat ./app
+$ prof record ./app
 $ prof report
 \end{lstlisting}
 
 \begin{enumerate}
 \item ¿Cómo se comporta el sistema durante la ejecución de la aplicación?
+\item ¿Son las métricas de contadores de {\it hardware} las esperadas?
+\item ¿Es la aplicación la gran concentradora de los recursos disponibles?
+\item ¿Qué instrucciones de {\it hardware} son las utilizadas en el cuello de botella?
 \end{enumerate}
 
 \item Comprobar vectorizaciones
@@ -1107,33 +1103,38 @@ $ gcc -Wall -Wextra -O3 --report-loop
 \end{lstlisting}
 
 \begin{enumerate}
-\item ¿Hay ciclos que no pueden ser vectorizados?
+\item ¿Hay ciclos que no pueden ser automáticamente vectorizados?
 \end{enumerate}
 
 \end{enumerate}
 
 \chapter{Casos de Estudio}\label{chapter:cases}
 
-Este capítulo aplica el procedimiento propuesto en el capítulo anterior. Varios ejemplos no triviales de aplicaciones de altas prestaciones son implementados
-y analizados utilizando los benchmarks y herramientas anteriormente presentadas.
+Este capítulo aplica el procedimiento propuesto en el capítulo anterior. Varios ejemplos no triviales de aplicaciones de altas prestaciones son implementados y analizados utilizando los benchmarks y herramientas anteriormente presentadas.
+
+\bigskip
+
+La información de soporte sirve para realizar un análisis justificando potenciales optimizaciones con números y comportamiento cuantificado. Sin embargo como realizar una optimización no es trivial y depende del conocimiento de algoritmos que exploten adecuadamente la arquitectura del sistema.
 
 \section{Rendimiento de Referencia}
 
-El sistema utilizado es el mismo para todos los casos de prueba. A continuación se muestra su configuración de hardware y software (Tabla \ref{table:testbed}), además del resultado del rendimiento según HPCC con un proceso por core disponible.
+El sistema utilizado es el mismo para todos los casos de prueba. A continuación se muestra su configuración de {\it hardware} y {\it software} (Tabla \ref{table:testbed}), además del resultado del rendimiento según HPCC con un proceso por core disponible.
 
 \begin{table}[H]
     \caption{Hardware y software de cada nodo de cómputo}
     \centering
     \begin{tabular}{|l|l|}\hline
       {\bf Component} & {\bf Description} \\ \hline
-      Placa Madre & Intel\textregistered 6 Series/C200 Series Chipset \\ \hline
+      Placa Principal & Intel\textregistered 6 Series/C200 Series Chipset \\ \hline
       CPU & Intel\textregistered Xeon\textregistered CoreTM i7-2620M CPU @ 2.7GHz \\ \hline
-      Ethernet controller & Intel\textregistered 82579V Gigabit Network \\ \hline
-      RAM Memory & 8 GB DDR3 \\ \hline
-      Operating System & Ubuntu 10.02 LTS \\ \hline
+      Controlador {\it Ethernet} & Intel\textregistered 82579V Gigabit Network \\ \hline
+      Memoria RAM & 8 GB DDR3 \\ \hline
+      Sistema Operativo & Ubuntu 10.02 LTS 64-bits \\ \hline
     \end{tabular}
     \label{table:testbed}
 \end{table}
+
+Una ejecución del benchmark HPCC nos muestra entonces el rendimiento a ser considerado como ideal en la práctica.
 
 \label{table:pruebas}
 
@@ -1150,8 +1151,9 @@ SingleFFT_Gflops=1.4984
 MPIFFT_Gflops=2.42216
 \end{verbatim}
 
-En comparación del rendimiento teórico contra el real cada {\it core} de la familia de procesadores 5000 realiza 2 FLOPs por ciclo,
-al vectorizarse el cómputo y utilizar registros de 128 bits con instrucciones SSE puede realizar 4 FLOPs por ciclo.
+% re-revisar, sino sacar
+
+En comparación del rendimiento teórico contra el real cada {\it core} de la familia de procesadores 5000 realiza 2 FLOPs por ciclo, al vectorizarse el cómputo y utilizar registros de 128 bits con instrucciones SSE puede realizar 4 FLOPs por ciclo.
 La ecuación \ref{eq:flops} muestra que si cada servidor posee dos procesadores entonces tiene un máximo teórico de $ 42.56 \times 2 = 85.12 $, por lo cual los $ 70.141 $ medidos corresponden.
 
 \begin{equation}
@@ -1170,7 +1172,7 @@ Para una matriz de {\tt 2048} números de punto flotante de precisión simple, e
 \bigskip
 
 Al realizar ejecuciones con tamaños de entrada creciente los resultados fueron: {\tt N=1024 2.035678236} segundos, {\tt N=2048 18.853} segundos, {\tt N=3072 1m19.505} segundos y {\tt N=4096 3m42.779s} (Figura \ref{fig:matrix-problem}. 
-Por defecto se ejecuta 1 thread por core disponible en el CPU.
+Por defecto se ejecuta 1 {\it thread} por {\it core} disponible en el CPU.
 
 \begin{figure}[H]
 \centering
@@ -1179,7 +1181,7 @@ Por defecto se ejecuta 1 thread por core disponible en el CPU.
 \label{fig:matrix-problem}
 \end{figure}
 
-Al realizar ejecuciones variando la cantidad de threads se obtuvieron los siguientes resultados (Figura \ref{fig:matrix-threads}). Calculamos entonces la proporción serial y paralela, 20\% y 80\% respectivamente. Los límites son entonces: Amdalah 5x y Gustafson 10x.
+Al realizar ejecuciones variando la cantidad de {\it threads} se obtuvieron los siguientes resultados (Figura \ref{fig:matrix-threads}). Calculamos entonces la proporción serial y paralela, 20\% y 80\% respectivamente. Los límites son entonces: {\it Amdalah} 5x y {\it Gustafson} 10x.
 
 \begin{figure}[H]
 \centering
@@ -1226,7 +1228,7 @@ for (i = 0; i < SIZE; ++i) {
 12,461 page-faults # 0.180 K/sec
 \end{verbatim}
 
-Diferentes alternativas de implementación esta operación son demostradas en \cite{mm-tool}, la 
+Diferentes alternativas de implementación de esta operación son demostradas en \cite{mm-tool}, la 
 Figura \ref{fig:mm} resume que utilizar una librería como BLAS es mejor que varios intentos de optimización.
 
 \begin{figure}[H]
@@ -1239,7 +1241,7 @@ Figura \ref{fig:mm} resume que utilizar una librería como BLAS es mejor que var
 \section{Distribución de Calor en Dos Dimensiones}
 
 Otro problema interesante es la simulación de transferencia de calor en un plano.
-Se utiliza una grilla donde cada celda transfiere calor a sus vecinos \footnote{\href{http://www.rblasch.org/studies/cs580/pa5/\#Source+Code-N100AC}{http://www.rblasch.org/studies/cs580/pa5/\#Source+Code-N100AC}.}.
+Se utiliza una grilla donde cada celda transfiere calor a sus vecinos en una serie de ciclos finitas simulando el paso del tiempo \footnote{\href{http://www.rblasch.org/studies/cs580/pa5/\#Source+Code-N100AC}{http://www.rblasch.org/studies/cs580/pa5/\#Source+Code-N100AC}.}.
 Un gráfico de la salida del cálculo es mostrado en la Figura \ref{fig:heat}.
 
 \begin{figure}[H]
@@ -1271,7 +1273,7 @@ Al realizar ejecuciones con tamaños de entrada creciente los resultados fueron:
 \label{fig:heat-threads}
 \end{figure}
 
-Al realizar ejecuciones variando la cantidad de threads se obtuvieron los siguientes resultados (Figura \ref{fig:heat-threads}). Calculamos entonces la proporción serial y paralela, 20\% y 80\% respectivamente. Los límites son entonces: Amdalah $ X $ x y Gustafson $ Y $ x.
+Al realizar ejecuciones variando la cantidad de {\it threads} se obtuvieron los siguientes resultados (Figura \ref{fig:heat-threads}). Calculamos entonces la proporción serial y paralela, 20\% y 80\% respectivamente. Los límites son entonces: {\it Amdalah} $ X $ x y {\it Gustafson} $ Y $ x.
 
 \begin{verbatim}
 109960.157161 task-clock # 3.839 CPUs utilized
@@ -1353,7 +1355,8 @@ El escalamiento de tamaño y cantidad de unidades de cómputo refleja un comport
 Un perfil del sistema muestra un uso casi totalitario por parte de la aplicación.
 
 \begin{verbatim}
-97.64% queens queens [.] solve(int, int, unsigned long, unsigned long, unsigned long)
+97.64% queens queens [.] solve(int, int, unsigned long,
+  unsigned long, unsigned long)
 1.56% queens [kernel.kallsyms] [k] __do_softirq
 \end{verbatim}
 
@@ -1390,28 +1393,25 @@ solve(int, int, unsigned long, unsigned long, unsigned long,
 \chapter{Conclusiones}\label{chapter:conclusions}
 
 La optimización del rendimiento de una aplicación es algo no trivial.
-Es preciso realizar un análisis del comportamiento y del uso de los recursos antes de
+Es preciso realizar un análisis disciplinado del comportamiento y del uso de los recursos antes de
 empezar a optimizar. Las mejoras pueden ser no significativas si son realizadas en el lugar incorrecto.
 
 \bigskip
 
-Este trabajo soporta los primeros pasos de análisis de rendimiento para expertos del dominio de un problema científico utilizando computación de altas prestaciones. Se provee una metodología de aplicación para principiantes, que puede ser utilizada como una lista de pasos para usuarios casuales, e incluso como referencia de consulta para expertos.
+Este trabajo soporta los primeros pasos de análisis de rendimiento para expertos del dominio de un problema científico utilizando computación de altas prestaciones. Se provee una metodología de uso de herramientas de soporte para principiantes, que puede ser utilizada como una lista de pasos resumidos para usuarios casuales, e incluso como referencia de consulta diaria para expertos.
 
 \bigskip
 
-Se aporta con el estado del arte del análisis de rendimiento en
+Se resume también el estado del arte del análisis de rendimiento en
 aplicaciones de cómputo de altas prestaciones. Respecto a herramientas de soporte, se detallan
-diferentes opciones y se demuestra su aplicación en varios problemas simples pero suficientemente interesantes. 
-
-\bigskip
-
-Este estudio propone un proceso de análisis de rendimiento gradual e iterativo.
-puede ser tomado como trabajo previo de una implementación práctica del método propuesto,
+diferentes opciones y se demuestra su aplicación en varios problemas simples aunque suficientemente interesantes. 
+Este estudio propone un proceso de análisis de rendimiento gradual e iterativo que
+puede ser tomado como trabajo previo de una implementación práctica del mismo. Es decir
 incluyendo soporte automático para la aplicación de las herramientas y la generación integrada de
 reportes de rendimiento. La utilización de estas ideas en una aplicación del mundo real es materia
 pendiente, otra posibilidad es re-implementar desde cero alguna aplicación
 científica en colaboración con algún grupo de investigación y realizar
-varios ciclos de optimización.
+varios ciclos de optimización para validar su utilidad.
 
 \bibliography{report}
 
